Fixed layout and hid full page scrollbar

--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,11 @@ html,body{
     width: 100%;
     
 }
+
+body::-webkit-scrollbar {
+    display: none;
+  }
+  
 #nav{
     position: absolute;
     height: 60px;
